--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chandelas</title>
-    <link rel="icon" type="image/jpg" href="img/Logo.jpg">
+    <link rel="icon" type="image/jpg" href="img/logo.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,7 @@
             <div class="contenedor">
                 <div class="barra">
                     <a class="logo" href="index.html">
-                        <img class="logo__img" src="/img/Logo.jpg" alt="Logo">
+                        <img class="logo__img" src="/img/logo.jpg" alt="Logo">
                     </a>
 
                     <nav class="navegacion">
@@ -66,7 +66,7 @@
                 <div>
                     <picture>
                         <source srcset="img/blog1.webp" type="imagen/webp">
-                        <img  src="img/Corte.webp" alt="imagen Corte" loading="lazy">
+                        <img  src="img/corte.webp" alt="imagen Corte" loading="lazy">
                     </picture>
                 </div>
 
@@ -79,7 +79,7 @@
                 <div class="entrada__derecha">
                     <picture>
                         <source srcset="img/blog2.webp" type="imagen/webp">
-                        <img src="img/Perfilado.webp" alt="imagen Perfilado" loading="lazy">
+                        <img src="img/perfilado.webp" alt="imagen Perfilado" loading="lazy">
                     </picture>
                 </div>
 
@@ -94,7 +94,7 @@
                 <div>
                     <picture>
                         <source srcset="img/blog3.webp" type="imagen/webp">
-                        <img src="img/Barba.webp" alt="imagen barba" loading="lazy">
+                        <img src="img/barba.webp" alt="imagen barba" loading="lazy">
                     </picture>
                 </div>
 
@@ -107,7 +107,7 @@
                 <div class="entrada__derecha">
                     <picture>
                         <source srcset="img/blog3.webp" type="imagen/webp">
-                        <img src="img/Dibujos.webp" alt="imagen Dibujos" loading="lazy">
+                        <img src="img/dibujos.webp" alt="imagen Dibujos" loading="lazy">
                     </picture>
                 </div>
 
@@ -123,7 +123,7 @@
                 <div>
                     <picture>
                         <source srcset="img/blog1.webp" type="imagen/webp">
-                        <img  src="img/Color.webp" alt="imagen Color" loading="lazy">
+                        <img  src="img/color.webp" alt="imagen Color" loading="lazy">
                     </picture>
                 </div>
 
@@ -248,7 +248,7 @@
 
         <div class="redes-sociales">
             <a href="https://www.instagram.com/barberia_chandelas/">
-                <img src="img/Instagram.png" alt="Instagram">
+                <img src="img/instagram.png" alt="Instagram">
             </a>
             <a href="https://wa.me/542612058659">
                 <img src="img/whatsapp.png" alt="Whatsapp">
