--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chandelas</title>
-    <link rel="icon" type="image/jpg" href="./img/logo.jpg">
+    <link rel="icon" type="image/jpg" href="img/logo.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +26,7 @@
             <div class="contenedor">
                 <div class="barra">
                     <a class="logo" href="index.html">
-                        <img class="logo__img" src="/img/logo.jpg" alt="Logo">
+                        <img class="logo__img" src="img/logo.jpg" alt="Logo">
                     </a>
 
                     <nav class="navegacion">
